<resources>
    <string name="app_name">Learn Words</string>


    <!-- Main screen -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mainActivity_tts_noTtsVoicesInstalled">No Voices installed</string>
    <string name="mainActivity_tts_noTtsVoicesInstalled_install">Install</string>
    <string name="mainActivity_tts_noTtsEnginesInstalled">No Voice engines</string>
    <string name="mainActivity_tts_noTtsEnginesInstalled_install">Install</string>
    <string name="mainActivity_tts_cantInitTTS">Can\'t init Voice</string>
    <string name="mainActivity_tts_cantInitTTS_retry">Retry</string>
    <string name="mainActivity_tts_unexpectedException_offVoice">Off TTS</string>


    <!-- NavigationMenu -->
    <string name="navigation_menu_sendEmail">Send email</string>
    <string name="navigation_menu_rate">Rate app</string>
    <string name="navigation_menu_rate_exception_marketNotExist">Google Play not found</string>
    <string name="navigation_menu_preferences">Settings</string>
    <string name="navigation_menu_wordsList">Dictionaries</string>
    <string name="navigation_menu_learnWords">Learn words</string>
    <string name="navigation_menu_repeatWords">Repeat words</string>
    <string name="navigation_menu_checkTranslate">Translate check</string>
    <string name="navigation_menu_spellcheck">Spell check</string>
    <string name="navigation_menu_addbook">Add book</string>
    <string name="navigation_menu_bookslist">Books list</string>
    <string name="navigation_menu_readbook">Read book</string>

    <!-- Dictionaries screen -->
    <string name="dictionariesList_menu_search">Search</string>
    <string name="dictionariesList_menu_addDictionary">Add dictionary</string>
    <string name="dictionariesList_contextMenu_rename">Rename</string>
    <string name="dictionariesList_contextMenu_remove">Remove</string>
    <string name="dictionariesList_countFormat">words: %1$d, learn: %2$d, ready: %3$d</string>
    <string name="dictionariesList_dialog_remove_title">Remove</string>
    <string name="dictionariesList_dialog_remove_message">Remove dictionary and all it\'s words?</string>
    <string name="dictionariesList_dialog_rename_title">Rename</string>
    <string name="dictionariesList_dialog_rename_message">New dictionary name</string>


    <!-- WordsList screen -->
    <string name="wordsList_menu_choiceWordsForLearn">Choice words</string>
    <string name="wordsList_menu_choiceWordsForLearn_clearList">Clear learn list</string>
    <string name="wordsList_menu_choiceWordsForLearn_selectAllWords">Learn all words</string>
    <string name="wordsList_menu_choiceWordsForLearn_baseWords">Base words</string>
    <string name="wordsList_menu_choiceWordsForLearn_irregularVerbsFull">Irregular verbs</string>
    <string name="wordsList_menu_choiceWordsForLearn_irregularVerbsShort">Irregular verbs (short)</string>
    <string name="wordsList_menu_choiceWordsForLearn_random10Words">Random 10 words</string>
    <string name="wordsList_menu_choiceWordsForLearn_random20Words">Random 20 words</string>
    <string name="wordsList_menu_choiceWordsForLearn_random50Words">Random 50 words</string>
    <string name="wordsList_menu_addWord">Add word</string>
    <string name="wordsList_menu_search">Search</string>
    <string name="wordsList_contextMenu_title">Actions</string>
    <string name="wordsList_contextMenu_edit">Edit</string>
    <string name="wordsList_contextMenu_createNew">Add</string>
    <string name="wordsList_contextMenu_remove">Remove</string>
    <string-array name="wordsList_status_items">
        <item > </item>
        <item >learn</item>
        <item >check</item>
        <item >trans</item>
        <item >write</item>
        <item >ready</item>
    </string-array>

    <!-- WordEdit screen -->
    <string name="wordEdit_menu_done">Done</string>
    <string name="wordEdit_menu_remove">Remove</string>
    <string name="wordEdit_word">Word</string>
    <string name="wordEdit_word_error">Word required</string>
    <string name="wordEdit_transcription">Transcription</string>
    <string name="wordEdit_translate">Translate</string>
    <string name="wordEdit_status">Stataus</string>
    <string-array name="wordEdit_status_items">
        <item >None</item>
        <item >Learn</item>
        <item >Check</item>
        <item >Check translate</item>
        <item >Check write</item>
        <item >Ready!</item>
    </string-array>

    <!-- Settings screen -->
    <string name="preferences_screen_title">Settings</string>
    <string name="preferences_category_base">Base</string>
    <string name="preferences_category_tts">Text to speech</string>
    <string name="preferences_item_autoSwitch_title">Auto words list</string>
    <string name="preferences_item_autoSwitch_summary">List words automatical</string>
    <string name="preferences_item_delayBetweenWordsChange_title">Words change delay</string>
    <string name="preferences_item_delayBetweenWordsChange_summary">Delay between words change in seconds</string>
    <string name="preferences_item_delayBetweenWordsChange_hint">Seconds delay</string>
    <string name="preferences_item_blink_title">Blink</string>
    <string name="preferences_item_blink_summary">Blink screen on word change</string>
    <string name="preferences_item_readWords_title">Read words</string>
    <string name="preferences_item_readWords_summary">Read english words aloud</string>
    <string name="preferences_item_readWordsSpeed_title">Speed rate</string>
    <string name="preferences_item_readWordsSpeed_summary">Speed of read words</string>
    <string name="preferences_item_readWordsSpeed_units">% </string>
    <string name="preferences_item_readTranslates_title">Read translate</string>
    <string name="preferences_item_readTranslates_summary">Read translate of words aloud</string>
    <string name="preferences_item_readTranslatesSpeed_title">Speed rate</string>
    <string name="preferences_item_readTranslatesSpeed_summary">Speed of read translates</string>
    <string name="preferences_item_readTranslatesSpeed_units">% </string>
    <string name="preferences_item_settingsTTS_title">TTS settings</string>
    <string name="preferences_item_settingsTTS_summary">Settings of text to speech</string>

    <!-- LearnWords screen -->
    <string name="learnWords_button_iKnowWord">I know this word</string>

    <!-- Check Translate screen -->
    <string name="checkTranslate_button_unknown">UNKNOWN</string>
    <string name="checkTranslate_button_next">NEXT</string>

    <!-- Check spell screen -->
    <string name="spellCheck_translate_hint">Enter word by translate</string>
    <string name="spellCheck_rightVariant">Right variant:</string>
    <string name="spellCheck_wrongText">Wrong</string>

    <!-- Splash screen -->
    <string name="splash_error_cantCreateDb">Can\'t create database</string>

    <!-- Read book screen -->
    <string name="readBook_menu_openBook">Open book</string>
    <string name="readBook_menu_viewWords">View words</string>
    <string name="readBook_menu_readOptions">Read options</string>
    <string name="readBook_menu_readSrc">Read source</string>
    <string name="readBook_menu_readDst">Read translate</string>
    <string name="readBook_menu_readSrcWordByWord">Source with new words</string>
    <string name="readBook_menu_readDstWordByWord">Translate with new words</string>
    <string name="readBook_menu_readOnlyWords">Only words</string>
    <string name="readBook_menu_useTranslator">Use translator</string>
    <string name="readBook_menu_readAloud">Read aloud</string>

    <string name="preferences_category_bookReaded">Book Reader</string>
    <string name="preferences_item_bookReaded_isUseTranslator_summary">isUseTranslator_summary</string>
    <string name="preferences_item_bookReaded_isUseTranslator_title">isUseTranslator</string>
    <string name="preferences_item_bookReaded_isReadAloud_summary">isReadAloud_summary</string>
    <string name="preferences_item_bookReaded_isReadAloud_title">isReadAloud</string>
    <string name="preferences_item_bookReaded_delayBetweenSentences_inMillisecond_summary">delayBetweenSentences_inMillisecond_summary</string>
    <string name="preferences_item_bookReaded_delayBetweenSentences_inMillisecond_title">delayBetweenSentences_inMillisecond</string>
    <string name="preferences_item_bookReaded_isReadSrc_summary">isReadSrc_summary</string>
    <string name="preferences_item_bookReaded_isReadSrc_title">isReadSrc</string>
    <string name="preferences_item_bookReaded_isReadSrcWordByWord_summary">isReadSrcWordByWord_summary</string>
    <string name="preferences_item_bookReaded_isReadSrcWordByWord_title">isReadSrcWordByWord</string>
    <string name="preferences_item_bookReaded_isReadDst_summary">isReadDst_summary</string>
    <string name="preferences_item_bookReaded_isReadDst_title">isReadDst</string>
    <string name="preferences_item_bookReaded_isReadDstWordByWord_summary">isReadDstWordByWord_summary</string>
    <string name="preferences_item_bookReaded_isReadDstWordByWord_title">isReadDstWordByWord</string>
    <string name="preferences_item_bookReaded_isReadOnlyWords_summary">isReadOnlyWords_summary</string>
    <string name="preferences_item_bookReaded_isReadOnlyWords_title">isReadOnlyWords</string>
    <string name="preferences_item_bookReaded_isDelayBetweenWords_summary">isDelayBetweenWords_summary</string>
    <string name="preferences_item_bookReaded_isDelayBetweenWords_title">isDelayBetweenWords</string>
    <string name="preferences_item_bookReaded_isDelayBetweenSentences_summary">isDelayBetweenSentences_summary</string>
    <string name="preferences_item_bookReaded_isDelayBetweenSentences_title">isDelayBetweenSentences</string>


</resources>
