<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/wordsList_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_addWord"
        android:title="@string/wordsList_menu_addWord"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_choiceWordsForLearn"
        android:title="@string/wordsList_menu_choiceWordsForLearn"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_selectAllWords"
                android:title="@string/wordsList_menu_choiceWordsForLearn_selectAllWords"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_clearList"
                android:title="@string/wordsList_menu_choiceWordsForLearn_clearList"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_random10"
                android:title="@string/wordsList_menu_choiceWordsForLearn_random10Words"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_random20"
                android:title="@string/wordsList_menu_choiceWordsForLearn_random20Words"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_random50"
                android:title="@string/wordsList_menu_choiceWordsForLearn_random50Words"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>
