<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@drawable/bg_main_activity"
              android:orientation="vertical"
              android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wordEdit_word"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingRight="38dp"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/transcription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wordEdit_transcription"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingRight="38dp"
            android:singleLine="true"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wordEdit_translate"
            android:imeOptions="actionNext"
            android:paddingRight="38dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wordEdit_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/wordEdit_status_items"/>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>