<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_activity"
        android:keepScreenOn="true"
        android:orientation="vertical"
        tools:context=".ui.activities.main.MainActivity">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/translate"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|top"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Hello World!"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorSecondaryText"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/translateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spellCheck_translate_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    >
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

<LinearLayout
    android:id="@+id/wordLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="left|top"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/spellCheck_rightVariant"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorSecondaryText"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="Hello World!"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryText"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/transcription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|top"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="[Hello World!]"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorSecondaryText"/>
</LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/unknown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/checkTranslate_button_unknown"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/checkTranslate_button_next"
                android:textAllCaps="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sound"
            style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:button="@drawable/ic_volume_up_grey600_24dp"
            android:buttonTint="@color/colorSecondaryText"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_volume_up_grey600_24dp"
            android:text=""
            app:buttonTint="@color/colorSecondaryText"/>

    </FrameLayout>
</androidx.core.widget.NestedScrollView>